--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,27 @@
--i https://pypi.org/simple
-click==7.0
-flask==1.0.2
+astroid==2.3.1
+atomicwrites==1.3.0
+attrs==19.2.0
+autopep8==1.4.4
+Click==7.0
+Flask==1.1.1
+importlib-metadata==0.23
+isort==4.3.21
 itsdangerous==1.1.0
-jinja2==2.10.1
-markupsafe==1.1.1
-werkzeug==0.15.2
+Jinja2==2.10.3
+lazy-object-proxy==1.4.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+more-itertools==7.2.0
+packaging==19.2
+pluggy==0.13.0
+py==1.8.0
+pycodestyle==2.5.0
+pylint==2.4.2
+pyparsing==2.4.2
+pytest==5.2.1
+six==1.12.0
+typed-ast==1.4.0
+wcwidth==0.1.7
+Werkzeug==0.16.0
+wrapt==1.11.2
+zipp==0.6.0
